initial code commit
dotenv_load([ $filename = '.env', $replace = false])

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,29 @@
 *.i*86
 *.x86_64
 *.hex
+
+config.guess
+config.h
+config.h.in
+config.log
+config.nice
+config.status
+config.sub
+configure
+configure.in
+Makefile
+Makefile.fragments
+Makefile.global
+Makefile.objects
+acinclude.m4
+aclocal.m4
+.deps
+.libs
+autom4te.cache
+build
+run-tests.php
+install-sh
+libtool
+ltmain.sh
+missing
+mkinstalldirs
